--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Uniz
-email: zhuzhang.num@163.com
+email: zebra.zhu@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
   A personal blog to record something interesting.
 baseurl: "" # the subpath of your site, e.g. /blog
